[M142] [omnibox][webui] Fix spacing between icon and text in omnibox popup.
Original change's description:
> [omnibox][webui] Fix spacing between icon and text in omnibox popup.
> 
> See screenshot in the bug.
> 
> Bug: 447645656
> Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/7001772
> Commit-Queue: Teresa Mao <temao@chromium.org>
> Cr-Commit-Position: refs/heads/main@{#1524964}

(cherry picked from commit 77b736a173d20cf8f4e8d0e79ffed71be407133e)

Bug: 450973321,447645656
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/7031293
Bot-Commit: Rubber Stamper <rubber-stamper@appspot.gserviceaccount.com>
Commit-Queue: Rubber Stamper <rubber-stamper@appspot.gserviceaccount.com>
Auto-Submit: Chrome Cherry Picker <chrome-cherry-picker@chops-service-accounts.iam.gserviceaccount.com>
Cr-Commit-Position: refs/branch-heads/7444@{#720}
Cr-Branched-From: 29907d3c18078029695f458b42fb8e6fda3e493d-refs/heads/main@{#1522585}

--- a/chrome/browser/resources/omnibox_popup/app.css
+++ b/chrome/browser/resources/omnibox_popup/app.css
@@ -11,8 +11,9 @@
   --cr-searchbox-icon-container-size: 28px;
   --cr-searchbox-match-padding: 6px;
   --cr-searchbox-match-padding-inline-start: 16px;
-  --cr-searchbox-results-margin-bottom: 0;
+  --cr-searchbox-match-text-padding-inline-start: 12px;
   --cr-searchbox-min-width: 75%;
+  --cr-searchbox-results-margin-bottom: 0;
   --cr-searchbox-width: 100%;
   font-size: 14.6px; /* closely resembles the omnibox input font size. */
   /* Colors used in the cr-searchbox results dropdown */
